QoL changes for imprecision calculation

--- a/app/python/ProxiPal_Report_v2_1.ipynb
+++ b/app/python/ProxiPal_Report_v2_1.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<br>\n",
     "<br>\n",
-    "<div style=\"font-size:26px; font-weight:bold\">ProxiPal PLA-Dx Run Processing & Performance Report</div>\n",
+    "<div style=\"font-size:24px; font-weight:bold\">ProxiPal PLA-Dx | Experiment Processing & Performance Report</div>\n",
     "<br>\n",
     "<div style=\"font-size:14px; font-weight:bold\">Title and Release Version of Your PLA-Dx Test (Document v#.##), Ref: PxK ### </div>\n",
     "<hr style=\"border: none; border-top: 3px solid black;\">"
@@ -418,7 +418,7 @@
    "metadata": {},
    "source": [
     "## Show Amplification and Melt Curve Plots  \n",
-    "Reaction plots are best viewed in the qPCR instrument software but users can display them here by exporting to the experiment folder; \"Amplification Plot.jpg\" and \"Melt Curve Plot.jpg\"."
+    "Reaction plots are best viewed exploerd in the qPCR instrument software. Here we simply import saved plot images (saved as _\"Amplification Plot.jpg\"_ and _\"Melt Curve Plot.jpg\"_) for reporting purposes. "
    ]
   },
   {
@@ -619,6 +619,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4568c65a",
+   "metadata": {},
+   "source": [
+    "#### Imprecision- Validation Set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0327e245",
@@ -628,7 +636,7 @@
     "# Create the buttons\n",
     "button_pandas_samples = widgets.Button(description=\"Pandas QC Table\", layout=widgets.Layout(width='250px'))\n",
     "\n",
-    "# Create the data dictionary\n",
+    "# Specify one manually\n",
     "qc_dict = {\n",
     "    'sample_id': ['NFL-LoQ', 'NFL-QC-L[6]', 'NFL-QC-M[19]', 'NFL-QC-H[91]'],\n",
     "    'mean': [2, 6, 19, 91],\n",
@@ -641,93 +649,148 @@
     "# Create DataFrame\n",
     "qc_df = pd.DataFrame(qc_dict)\n",
     "\n",
-    "def process_qc_data(qc_df, metatable_df):\n",
-    "    \"\"\"\n",
-    "    Process QC data and identify failures based on standard deviation ranges.\n",
-    "    Uses mean values from qc_df to evaluate failures for both raw and mean ng/L values.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    qc_df (pd.DataFrame): DataFrame containing QC information\n",
-    "    metatable_df (pd.DataFrame): DataFrame containing measurement data with dilution column\n",
-    "    \n",
-    "    Returns:\n",
-    "    pd.DataFrame: Updated QC DataFrame with fail values\n",
-    "    \"\"\"\n",
-    "    # Create a copy of the input DataFrame to avoid modifying the original\n",
-    "    qc_df = qc_df.copy()\n",
-    "    \n",
-    "    def parse_range(range_str):\n",
-    "        \"\"\"Extract min and max values from range string '[min, max]'\"\"\"\n",
-    "        return [float(x) for x in range_str.strip('[]').split(',')]\n",
-    "    \n",
-    "    def calculate_deviations(value, mean, std):\n",
-    "        \"\"\"Calculate number of standard deviations from mean\"\"\"\n",
-    "        return abs(value - mean) / std\n",
-    "    \n",
-    "    def check_failures(sample_data, mean_val, std_val, value_column):\n",
-    "        \"\"\"Check for failures in a specific value column\"\"\"\n",
-    "        fails = []\n",
-    "        for pos_idx, pos_row in sample_data.iterrows():\n",
-    "            value = pos_row[value_column]\n",
-    "            position = pos_row['position']\n",
-    "            \n",
-    "            # Check if value is outside the acceptable range defined by mean ± 2*std\n",
-    "            if (value < (mean_val - 2*std_val)) or (value > (mean_val + 2*std_val)):\n",
-    "                dev_calc = calculate_deviations(value, mean_val, std_val)\n",
-    "                fail_str = f\"[{position};{value:.0f};{dev_calc:.2f}]\"\n",
-    "                fails.append(fail_str)\n",
-    "        return fails\n",
-    "    \n",
-    "    # Process each QC sample\n",
-    "    for idx, row in qc_df.iterrows():\n",
-    "        sample_id = row['sample_id']\n",
-    "        mean_val = row['mean']\n",
-    "        std_val = row['stdev']\n",
-    "        \n",
-    "        # Filter metatable for current sample_id and dilution\n",
-    "        sample_data = metatable_df[\n",
-    "            (metatable_df['sample_id'] == sample_id) & \n",
-    "            (metatable_df['dilution'] == 10)\n",
-    "        ]\n",
-    "        \n",
-    "        # Check raw values\n",
-    "        raw_fails = check_failures(sample_data, mean_val, std_val, \n",
-    "                                 'SLR; log10(x); exc_std0; ct; raw_ng/L')\n",
-    "        if raw_fails:\n",
-    "            qc_df.at[idx, 'fail raw_ng/L'] = '; '.join(raw_fails)\n",
-    "            \n",
-    "        # Check mean values\n",
-    "        mean_fails = check_failures(sample_data, mean_val, std_val,\n",
-    "                                  'SLR; log10(x); exc_std0; ct; mean_ng/L')\n",
-    "        if mean_fails:\n",
-    "            qc_df.at[idx, 'fail mean_ng/L'] = ', '.join(mean_fails)\n",
-    "    \n",
-    "    return qc_df\n",
-    "\n",
     "# Define the data display function for Pandas QC Table\n",
-    "def display_pandas_dataframe(event):\n",
+    "def compare_QC_validation_set(event):\n",
     "    input_val = input_text.value\n",
-    "    \n",
-    "    # Clear previous output first\n",
-    "    clear_output()\n",
-    "    # Show buttons immediately\n",
-    "    display(widgets.HBox([button_pandas_samples]))\n",
-    "    \n",
-    "    metatable_path = Path(data_folder / df_pivot['experiment'][input_text.value] / \n",
-    "                         df_pivot['analysis'][input_text.value] / \"exports\" / \"py_metatable.csv\")\n",
-    "    # Read the metatable directly and process it\n",
-    "    py_metatable = pd.read_csv(metatable_path, low_memory=False)\n",
     "\n",
+    "    clear_output()\n",
+    "    display(widgets.HBox([button_pandas_samples]))\n",
+    "\n",
+    "    metatable_path = Path(\n",
+    "        data_folder\n",
+    "        / df_pivot['experiment'][input_text.value]\n",
+    "        / df_pivot['analysis'][input_text.value]\n",
+    "        / \"exports\"\n",
+    "        / \"py_metatable.csv\"\n",
+    "    )\n",
+    "\n",
+    "    py_metatable = pd.read_csv(metatable_path, low_memory=False)\n",
     "    updated_QC_df = process_qc_data(qc_df, py_metatable)\n",
-    "    \n",
+    "\n",
     "    pd.set_option('display.max_rows', None)\n",
     "    display(updated_QC_df)\n",
     "\n",
-    "# Assign the event handlers to the buttons\n",
-    "button_pandas_samples.on_click(display_pandas_dataframe)\n",
+    "button_pandas_samples.on_click(compare_QC_validation_set)\n",
+    "display(widgets.HBox([button_pandas_samples]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "186e281e",
+   "metadata": {},
+   "source": [
+    "#### Imprecision- Custom Set\n",
+    "This section will recalculate the quality control tables specifying specfic experiments.  \n",
+    "This requires mastertable access. Refer to the \"Available Experiments Checklist\" and identify which experiments to use.  \n",
+    "You might use this feature to:  \n",
+    "- Refer to a set group of imprecision experiments performed during QC validation; this assumes instrument calibration and assay stability since validation\n",
+    "- Recalulate QC boundaries based on more recent experiments; this permits drift to be accomodated\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "334b88df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ImprecisionAnalysisProcessor:\n",
+    "    def __init__(self):\n",
+    "        self.password = proxipal_password\n",
     "\n",
-    "# Display the buttons\n",
-    "display(widgets.HBox([button_pandas_samples]))"
+    "    def run_analysis(self, button):\n",
+    "        button.disabled = True\n",
+    "        clear_output()\n",
+    "        display(widgets_box_imprecision)\n",
+    "\n",
+    "        if self.password_input.value == self.password:\n",
+    "            mastertable, _ = load_most_recent_mastertable(base_path / 'exports')\n",
+    "\n",
+    "            # Parse user input for selected rows\n",
+    "            try:\n",
+    "                selected_rows = [int(x.strip()) for x in self.row_input.value.split(',') if x.strip()]\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input for selected rows. Use comma-separated integers.\")\n",
+    "                return\n",
+    "\n",
+    "            df_pivot_list = [f\"{k}.csv\" for k in df_pivot.loc[selected_rows, 'path_key']]\n",
+    "            mastertable_slice = mastertable[mastertable['filepath_csv'].isin(df_pivot_list)]\n",
+    "\n",
+    "            analyse_ss = analyze_sample_stats(\n",
+    "                data=mastertable_slice,\n",
+    "                model_type='SLR; log10(x); exc_std0; ct; raw_ng/L',\n",
+    "                decimal_places=self.decimal_dropdown.value,\n",
+    "                format_timing=self.format_timing_dropdown.value\n",
+    "            )\n",
+    "\n",
+    "            qc_df = build_qc_df(\n",
+    "                analyse_ss,\n",
+    "                sample_id=['NFL-QC-L', 'NFL-QC-M', 'NFL-QC-H'],\n",
+    "                stdev_range=2\n",
+    "            )\n",
+    "\n",
+    "            qc_results = process_qc_data(qc_df, mastertable_slice)\n",
+    "            display(qc_results)\n",
+    "        else:\n",
+    "            print(\"Incorrect password. Try again.\")\n",
+    "\n",
+    "imprecision_processor = ImprecisionAnalysisProcessor()\n",
+    "\n",
+    "imprecision_processor.password_input = widgets.Password(\n",
+    "    description='Password', layout=widgets.Layout(width='200px')\n",
+    ")\n",
+    "\n",
+    "imprecision_processor.row_input = widgets.Text(\n",
+    "    description='Rows', placeholder='e.g. 0,1,2', layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "imprecision_processor.decimal_dropdown = widgets.Dropdown(\n",
+    "    options=['integer', 1, 2],\n",
+    "    value=1,\n",
+    "    description='Decimals',\n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "imprecision_processor.format_timing_dropdown = widgets.Dropdown(\n",
+    "    options=['before', 'after'],\n",
+    "    value='before',\n",
+    "    description='Timing',\n",
+    "    layout=widgets.Layout(width='250px')\n",
+    ")\n",
+    "\n",
+    "button_analyse_imprecision = widgets.Button(\n",
+    "    description=\"Run Imprecision Analysis\", layout=widgets.Layout(width='250px')\n",
+    ")\n",
+    "\n",
+    "button_analyse_imprecision.on_click(imprecision_processor.run_analysis)\n",
+    "\n",
+    "widgets_box_imprecision = widgets.HBox([\n",
+    "    imprecision_processor.password_input,\n",
+    "    imprecision_processor.row_input,\n",
+    "    imprecision_processor.decimal_dropdown,\n",
+    "    imprecision_processor.format_timing_dropdown,\n",
+    "    button_analyse_imprecision\n",
+    "])\n",
+    "\n",
+    "info_text = widgets.HTML(\n",
+    "    \"<span style='font-size:13px;'>\"\n",
+    "    \"Select row indexes, decimal format, and calculation timing.<br>\"\n",
+    "    \"‘Decimals’ controls rounding precision; ‘Timing’ controls when rounding is applied.\"\n",
+    "    \"</span>\"\n",
+    ")\n",
+    "\n",
+    "info_text = widgets.HTML(\n",
+    "    \"<span style='font-size:13px;'>\"\n",
+    "    \"Row indexes: Choose from 'Available Experiments Checklist' Table <br>\"\n",
+    "    \"Timing: Assay acceptance is based on the QC range mean +/- 2*stdev. <br>\"\n",
+    "    \"'before' applies rounding prior to 2*stdev is calculated (default) <br>\"\n",
+    "    \"'after' applies rounding prior to 2*stdev is calculated <br>\"\n",
+    "    \"When rounding applies can greatly affect the acceptance limits\"\n",
+    "    \"</span>\"\n",
+    ")\n",
+    "\n",
+    "display(widgets.VBox([widgets_box_imprecision, info_text]))\n",
+    "\n"
    ]
   },
   {
@@ -747,38 +810,10 @@
    "outputs": [],
    "source": [
     "# Create the buttons\n",
-    "# button_qgrid_samples = widgets.Button(description=\"Qgrid Sample Table\", layout=widgets.Layout(width='250px'))\n",
     "button_pandas_samples = widgets.Button(description=\"Pandas Sample Table\", layout=widgets.Layout(width='250px'))\n",
     "\n",
-    "# # Define the data display function for Qgrid Sample Table\n",
-    "# def process_and_display_dataframe(event):\n",
-    "#     input_val = input_text.value\n",
-    "    \n",
-    "#     # Clear previous output first\n",
-    "#     clear_output()\n",
-    "#     # Show buttons immediately\n",
-    "#     display(widgets.HBox([button_qgrid_samples, button_pandas_samples]))\n",
-    "    \n",
-    "#     metatable_path = Path(data_folder / df_pivot['experiment'][input_text.value] / \n",
-    "#                          df_pivot['analysis'][input_text.value] / \"exports\" / \"py_metatable.csv\")\n",
-    "#     # Read the metatable directly and process it\n",
-    "#     py_metatable = pd.read_csv(metatable_path, low_memory=False)\n",
-    "#     # Get filepath from metatable\n",
-    "#     filepath = py_metatable['filepath_csv'].unique().tolist()[0]\n",
-    "    \n",
-    "#     result = extract_experiment_tables(df = py_metatable, \n",
-    "#                                      filepath_csv = filepath, \n",
-    "#                                      quant_model = 'SLR', \n",
-    "#                                      threshold_type = 'ct', \n",
-    "#                                      transform_x='log10(x)', \n",
-    "#                                      std0_status='exc_std0', \n",
-    "#                                      sample_type = 'samples', \n",
-    "#                                      simple_headers=True)\n",
-    "    \n",
-    "#     display(qgrid.show_grid(result['sample_report_table'], show_toolbar=False))\n",
-    "\n",
     "# Define the data display function for Pandas Sample Table\n",
-    "def display_pandas_dataframe(event):\n",
+    "def display_ct_samples(event):\n",
     "    input_val = input_text.value\n",
     "    \n",
     "    # Clear previous output first\n",
@@ -806,8 +841,7 @@
     "    display(result['sample_report_table'])\n",
     "\n",
     "# Assign the event handlers to the buttons\n",
-    "# button_qgrid_samples.on_click(process_and_display_dataframe)\n",
-    "button_pandas_samples.on_click(display_pandas_dataframe)\n",
+    "button_pandas_samples.on_click(display_ct_samples)\n",
     "\n",
     "# Display the buttons\n",
     "display(widgets.HBox([button_pandas_samples]))"
@@ -834,38 +868,10 @@
    "outputs": [],
    "source": [
     "# Create the buttons\n",
-    "# button_qgrid_wells = widgets.Button(description=\"Qgrid Well Table\", layout=widgets.Layout(width='250px'))\n",
     "button_pandas_wells = widgets.Button(description=\"Pandas Well Table\", layout=widgets.Layout(width='250px'))\n",
     "\n",
-    "# # Define the data display function for Qgrid Sample Table\n",
-    "# def process_and_display_dataframe(event):\n",
-    "#     input_val = input_text.value\n",
-    "    \n",
-    "#     # Clear previous output first\n",
-    "#     clear_output()\n",
-    "#     # Show buttons immediately\n",
-    "#     display(widgets.HBox([button_qgrid_wells, button_pandas_wells]))\n",
-    "    \n",
-    "#     metatable_path = Path(data_folder / df_pivot['experiment'][input_text.value] / \n",
-    "#                          df_pivot['analysis'][input_text.value] / \"exports\" / \"py_metatable.csv\")\n",
-    "#     # Read the metatable directly and process it\n",
-    "#     py_metatable = pd.read_csv(metatable_path, low_memory=False)\n",
-    "#     # Get filepath from metatable\n",
-    "#     filepath = py_metatable['filepath_csv'].unique().tolist()[0]\n",
-    "    \n",
-    "#     result = extract_experiment_tables(df = py_metatable, \n",
-    "#                                      filepath_csv = filepath, \n",
-    "#                                      quant_model = 'SLR', \n",
-    "#                                      threshold_type = 'ct', \n",
-    "#                                      transform_x='log10(x)', \n",
-    "#                                      std0_status='exc_std0', \n",
-    "#                                      sample_type = 'wells', \n",
-    "#                                      simple_headers=True)\n",
-    "    \n",
-    "#     display(qgrid.show_grid(result['wells_table'], show_toolbar=False))\n",
-    "\n",
     "# Define the data display function for Pandas Sample Table\n",
-    "def display_pandas_dataframe(event):\n",
+    "def display_ct_wells(event):\n",
     "    input_val = input_text.value\n",
     "    \n",
     "    # Clear previous output first\n",
@@ -893,8 +899,7 @@
     "    display(result['wells_table'])\n",
     "\n",
     "# Assign the event handlers to the buttons\n",
-    "# button_qgrid_wells.on_click(process_and_display_dataframe)\n",
-    "button_pandas_wells.on_click(display_pandas_dataframe)\n",
+    "button_pandas_wells.on_click(display_ct_wells)\n",
     "\n",
     "# Display the buttons\n",
     "display(widgets.HBox([button_pandas_wells]))"
@@ -1013,7 +1018,7 @@
     "button_pandas_RDMLsamples = widgets.Button(description=\"Pandas rdml_log2N0 Samples\", layout=widgets.Layout(width='250px'))\n",
     "\n",
     "# Define the data display function for Pandas Sample Table\n",
-    "def display_pandas_dataframe(event):\n",
+    "def display_rdml_samples(event):\n",
     "    input_val = input_text.value\n",
     "    \n",
     "    # Clear previous output first\n",
@@ -1041,7 +1046,7 @@
     "    display(result['sample_report_table'])\n",
     "\n",
     "# Assign the event handlers to the buttons\n",
-    "button_pandas_RDMLsamples.on_click(display_pandas_dataframe)\n",
+    "button_pandas_RDMLsamples.on_click(display_rdml_samples)\n",
     "\n",
     "# Display the buttons\n",
     "display(widgets.HBox([button_pandas_RDMLsamples]))"
@@ -1069,7 +1074,7 @@
     "button_pandas_RDMLwells = widgets.Button(description=\"Pandas rdml_log2N0 Wells\", layout=widgets.Layout(width='250px'))\n",
     "\n",
     "# Define the data display function for Pandas Sample Table\n",
-    "def display_pandas_dataframe(event):\n",
+    "def display_wells_samples(event):\n",
     "    input_val = input_text.value\n",
     "    \n",
     "    # Clear previous output first\n",
@@ -1097,7 +1102,7 @@
     "    display(result['wells_table'])\n",
     "\n",
     "# Assign the event handlers to the buttons\n",
-    "button_pandas_RDMLwells.on_click(display_pandas_dataframe)\n",
+    "button_pandas_RDMLwells.on_click(display_wells_samples)\n",
     "\n",
     "# Display the buttons\n",
     "display(widgets.HBox([button_pandas_RDMLwells]))"
@@ -1537,15 +1542,6 @@
     "\n",
     "            print(\"New mastertable.csv created: \", str(base_path) + '/exports')\n",
     "            print(\"Samples without Data or Submission info are shown in the table below\")\n",
-    "\n",
-    "#             # Get a list of the column names\n",
-    "#             col_names = master_dict['master_df_orphan'].columns.tolist()\n",
-    "\n",
-    "#             # Define column definitions for qgrid\n",
-    "#             col_defs = {'index': {'width': 100 / 15}}\n",
-    "#             for col in col_names:\n",
-    "#                 if col not in col_defs:\n",
-    "#                     col_defs[col] = {'width': 100}\n",
     "                    \n",
     "        else:\n",
     "            print('Incorrect password. Try again.')\n",
