Enhance Diomni support: unify export parsing, enforce lowercase headers, ignore tables lacking 'Well', normalize ragged rows, integrate with instrument data pipeline

--- a/app/python/ProxiPal_Report_v2_1.ipynb
+++ b/app/python/ProxiPal_Report_v2_1.ipynb
@@ -173,7 +173,7 @@
    "id": "49bc86cc",
    "metadata": {
     "hide_input": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
